// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remainingSkills filters chosen skills 1`] = `
Array [
  "slinging",
  "dashing",
  "daring",
]
`;

exports[`remainingSkills filters chosen skills and prefix 1`] = `
Array [
  "dashing",
  "daring",
]
`;
